# netcup-api-ddns

./: .gitignore  README.md  netcup-ddns.conf  pyproject.toml  setup_dev_venv.sh  setup_exec_venv.sh  update_ddns_subdomain.py
